--- a/styles.css
+++ b/styles.css
@@ -22,9 +22,20 @@
     background-color: gray;
 }
 
+h1 {
+    font-family: Roboto;
+    font-size: 2rem;
+}
+
 img, video, iframe {
   max-width: 100%;
   height: auto;
+}
+
+footer {
+    border-top: 2px dotted black;
+    text-align: center;
+    background-color: gray;
 }
 
 
@@ -33,4 +44,10 @@ img, video, iframe {
     flex-direction: column;
     align-items: center;
   }
+}
+
+@media (min-width: 768px) {
+    img, video, iframe {
+        max-width: 560px;
+    }
 }
