--- a/styles.css
+++ b/styles.css
@@ -27,11 +27,27 @@ h1 {
     font-size: 2rem;
 }
 
+h2 {
+    font-family: "Inter", "Segoe UI", Roboto, sans-serif;
+    letter-spacing: 0.5px;
+    font-size: 1.5rem;
+    border-bottom: 2px solid black;
+}
+
+h3 {
+    font-family: "Inter", "Segoe UI", Roboto, sans-serif;
+}
+
 details {
     border: 2px solid black;
     border-radius: 8px;
-    background-color: gray;
+    background-color: peachpuff;
     transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+details[open] {
+    background-color: lightcoral;
+    transform: scale(1.02);
 }
 
 summary {
@@ -40,6 +56,21 @@ summary {
     cursor: pointer;
     color: #333;
     text-transform: uppercase;
+}
+
+
+ol {
+    list-style-position: inside;
+    padding-left: 0px;
+    margin: 15px 0px;
+    background-color: paleturquoise;
+    border-radius: 4px;
+}
+
+ol li {
+    padding: 6px 10px;
+    line-height: 1.5px;
+    margin: 5px 0px;
 }
 
 img, video, iframe {
@@ -57,6 +88,7 @@ footer {
 ul {
     list-style-type: disc;
 }
+
 
 
 @media (max-width: 768px) {
