--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ h3 {
 
 details {
     width: 95%;
+    align-items: center;
     border: 2px solid black;
     border-radius: 8px;
     background-color: peachpuff;
