--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ h3 {
 
 details {
     width: 95%;
-    align-items: center;
+    margin: 0 auto;
     border: 2px solid black;
     border-radius: 8px;
     background-color: peachpuff;
