--- a/styles.css
+++ b/styles.css
@@ -75,10 +75,12 @@ ol li {
     padding: 6px 10px;
     line-height: 1.5;
     margin: 5px 0px;
+    overflow-wrap: break-word;
 }
 
 ul {
     display: inline-block;
+    list-style-type: square;
     list-style-position: inside;
     padding-left: 0px;
     padding: 15px 20px; 
@@ -91,6 +93,8 @@ ul li {
     padding: 6px 10px;
     line-height: 1.5;
     margin: 5px 0px;
+    overflow-wrap: break-word;
+
 }
 
 img, video, iframe {
@@ -103,10 +107,6 @@ footer {
     text-align: center;
     background-color: gray;
     margin-bottom: 1px;
-}
-
-ul {
-    list-style-type: disc;
 }
 
 
