--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,14 @@
     background-color: gray;
 }
 
+body {
+    background-image: url("websitebg.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+}
+
 h1 {
     font-family: "Inter", "Segoe UI", Roboto, sans-serif;
     font-size: 2rem;
