mobile bg optim

--- a/styles.css
+++ b/styles.css
@@ -167,3 +167,9 @@ section {
         box-sizing: border-box;
     }
 }
+
+@media (max-width: 768px) {
+    body {
+        background-attachment: scroll;
+    }
+}
