--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,13 @@
     padding: 5px;
 }
 
+.nav-bar li {
+    flex-grow: 1;
+    text-align: center;
+    flex-shrink: 1;
+    flex-basis: 100px;
+}
+
 .nav-bar li a {
     color: white;
     font-family: "Inter", "Segoe UI", Roboto, sans-serif;
