--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,9 @@
 }
 
 .nav-bar li a {
+    display: block;
+    width: 100%;
+    height: 100%;
     color: white;
     font-family: "Inter", "Segoe UI", Roboto, sans-serif;
     font-size: 1rem;
