edited nav again

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,12 @@
     padding: 5px;
 }
 
+.nav-bar li {
+    flex-grow: 1;
+    text-align: center;
+    flex-shrink: 1;
+}
+
 .nav-bar li a {
     display: block;
     width: 100%;
@@ -159,9 +165,6 @@ section {
 
 @media (min-width: 768px) {
     .nav-bar li {
-        flex-grow: 1;
-        text-align: center;
-        flex-shrink: 1;
         flex-basis: 100px;
     }
 }
